--- a/_includes/head.html
+++ b/_includes/head.html
@@ -171,18 +171,7 @@
       fjs.parentNode.insertBefore(js, fjs);
     })(document, "script", "dhm");
   </script>
-  <!-- buy me a coffeee -->
-  <script
-    data-name="BMC-Widget"
-    src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
-    data-id="sujaykundu"
-    data-description="Support me on Buy me a coffee!"
-    data-message=""
-    data-color="#FF813F"
-    data-position="right"
-    data-x_margin="10"
-    data-y_margin="10"
-  ></script>
+  <!-- support to come  -->
 
   <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
   <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
