--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -24,17 +24,17 @@
   <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
 
   <p class="lead" id="typewriteText"></p>
-  <span>
+  <!-- <span>
     {%- include github_star_button.html -%}
     {%- include github_fork_button.html -%}
-  </span>
+  </span> -->
   <!-- uncomment/modify buttons as you want-->
-  <div class="jumbotron-btns">
+  <!--<div class="jumbotron-btns">
     <a href="{{site.url}}{{site.baseurl}}/get-started">
       <button class="btn btn-md btn-warning"> <strong>Get Started</strong> </button>
     </a>
     <a id="olvy-target">
       <button class="btn btn-md btn-default"> <strong>What's New</strong> </button>
      </a>
-  </div>
+  </div>-->
 </div>
