--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -11,10 +11,10 @@
         >{{ page.date | date: "%b %-d, %Y" }}</time
       >
     </p>
-    <span
+    <!-- <span
       class="disqus-comment-count"
       data-disqus-identifier="{{ page.url }}"
-    ></span>
+    ></span> -->
     <div class="post-categories">
       {% if post %} {% assign categories = post.categories %} {% else %} {%
       assign categories = page.categories %} {% endif %} Category : {% for
@@ -44,9 +44,10 @@
     {% endif %}
   </div>
   {%- if site.hyvor_talk_website_id -%}
+  <!-- Deactivate Comments
   <div class="comments">
     {%- include hyvor_comments.html -%}
-   </div>
+   </div>-->
     {%- endif -%}
   <!-- Incomment incase you want to use Disqus
       <div id="disqus_thread"></div>
