--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -45,6 +45,9 @@ html[data-theme="light"] {
 }
 
 @import
+    "colors/light-typography",
+    "colors/dark-typography",
+    
     "addon/module",
     "addon/variables",
     "addon/syntax";
